add test framework & cleanup (#3)